# crypto_trade_bot

./: .gitignore
FX/London_breakout/: .env.example  .gitignore  CLAUDE.md  PLAN.md  requirements.txt
FX/London_breakout/backtest/: engine.py  (+2 more)
MEXC/: .env.sample  mexc_bot.py
MEXC/ada_usdt/: ada_usdt_data_get.ipynb
MEXC/sol_usdc/: sol_usdc_data_get.ipynb
bitbank/Atom_bot/: .env.sample  Atom_bot.py  requirements.txt
bitbank/MM-bot-1/: MM-bot-1.py  requirements.txt
イベント駆動型/: .gitignore  AGENTS.md  README.md  pyproject.toml  概要.txt
イベント駆動型/config/: .env.example  settings.example.yaml
イベント駆動型/data/: bot.db
イベント駆動型/docs/: 01_PRD.md  02_REQUIREMENTS.md  03_ARCHITECTURE.md  04_EXCHANGE_INTEGRATION.md  05_STRATEGY_SPEC.md  06_RISK_POLICY.md  07_TEST_PLAN.md  08_TASK_BREAKDOWN.md  09_CODEX_PROMPTS.md  10_SOURCES.md
イベント駆動型/src/crypto_bot/: __init__.py
イベント駆動型/src/crypto_bot/adapters/: base.py  bitget.py  dry_run.py  live_support.py  mexc.py  paper.py  registry.py
イベント駆動型/src/crypto_bot/cli/: replay.py  report.py  run_dry.py  run_paper.py
イベント駆動型/src/crypto_bot/collectors/: __init__.py  demo.py  normalizer.py  replay.py
イベント駆動型/src/crypto_bot/core/: config.py  events.py  logging.py  models.py  runner.py
イベント駆動型/src/crypto_bot/execution/: order_manager.py
イベント駆動型/src/crypto_bot/features/: basis.py
イベント駆動型/src/crypto_bot/risk/: engine.py
イベント駆動型/src/crypto_bot/storage/: export.py  report.py  sqlite.py
イベント駆動型/src/crypto_bot/strategies/: basis_extreme.py
イベント駆動型/test-output/: replay-cli.jsonl
イベント駆動型/tests/: test_basis_and_risk.py
(+8 files in other folders)
